--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "babel-loader": "^9.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
