--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@storybook/react": "^6.5.12",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.2.5",
     "husky": "^8.0.1",
     "react": "^18.2.0",
@@ -69,6 +70,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "react-hook-form": "^7.36.1"
+    "react-hook-form": "^7.36.1",
+    "styled-components": "^5.3.6"
   }
 }
